fixed https url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Explore real-time and forecasted weather conditions with our intuitive Weather App. Stay informed about temperature, humidity, and precipitation, plan your activities, and receive alerts for severe weather events. Your go-to source for accurate and up-to-date weather information.">
     <meta name="Robin" content="Your Name">
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=Atm3FL7yEPbwHzwydCKc6x5S4co2frvIfXkwyv3KGqdUvBRCY9fhRvqVfvZCUsVe' async defer></script>
+    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=Atm3FL7yEPbwHzwydCKc6x5S4co2frvIfXkwyv3KGqdUvBRCY9fhRvqVfvZCUsVe' async defer></script>
 </head>
 
 <body>
